tests/org.eclipse.php.core.tests/workspace/errors/php54/cannotExtendTrait.pdtt
--TEST--
Test trait with superclass error reporting
--FILE--
<?php
trait A extends Y {}
?>
--EXPECT--
[line=2, start=12, end=13] A trait (A) cannot extend a class. Traits can only be composed from other traits with the 'use' keyword